--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,22 @@ h1 {
   padding: 0;
   margin: 0;
 }
+
+.btn-primary {
+  background-color: blue;
+}
+
+.text-primary {
+  color: aqua;
+}
+
+.text-secondary {
+  color: beige;
+}
+.text-terinary {
+  color:blueviolet
+}
+
+.text-black {
+  color:chocolate
+}
