--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,19 @@ h1 {
 .text-black {
   color:chocolate
 }
+
+.box {
+  width: 100px;
+  height: 50px;
+  border: 1px solid #000;
+  background-color: antiquewhite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.boxContainer {
+  display: flex;
+  flex-wrap: wrap;
+  width: 500px;
+}
