--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,31 @@ h1 {
 .box1:hover {
   opacity: 0;
 }
+
+.traffic_container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: center
+}
+
+.traffic-light-container {
+  background-color: #000;
+  border-radius: 8px;
+  display: flex;
+  padding: 8px;
+  gap: 8px
+}
+
+.traffic-light-container--vertical {
+  flex-direction: column
+}
+
+.traffic-light {
+  --size: 50px;
+  background-color: #555;
+  border-radius: var(--size);
+  height: var(--size);
+  width: var(--size)
+}
